# wengerbinning

./: .gitignore  Makefile  README  README.md  SOFTWARE.LIST  WEBSITES.LIST  action  conf  kconfig  modules.yml  workflows.md
.obsidian/: workspace
algorithm/: README  README.md
archlinux/: README.md
c/: .gitignore  CMakeLists.txt  Kconfig  Makefile  README  README.md  configure.scan  helloworld  helloworld.c
c/.obsidian/: workspace
c/code/windows/process/: process.c
c/demo/: Makefile  README  helloworld.c  popen  stdio-popen.c
c/demo/corefiles/: pointer.c
c/demo/file/: exist_file.c  wirte.c
c/demo/file_manager/: file_fopen.c
c/demo/http_tcp/: server.c
c/demo/include/tools/: info.h  tprint.h
c/demo/kernel/: helloworld.c
c/demo/memory/: CMakeLists.txt  demo-memory-allocation.c
c/demo/multiprocess/: start_capure.c
c/demo/operator/: a.out
c/demo/paramater/: arraystring.c
c/demo/pthreads/: pthread_create.c
c/demo/samba/: talloc  talloc.c
c/demo/socket/ns/: server.c
c/demo/socket/uds/: CMakeLists.txt  uds-client.c  uds-server.c
c/demo/stdio/: file_fopen  file_fopen.c
c/demo/sys_stat/: mkdir.c
c/demo/tcp_socket/: client.c  multiprocess_server.c  single_server.c
c/demo/time/: gettime  gettime.c
c/demo/tools/: info.c
c/demo/type/: byte-jsg.c  byte-jsg.h  char-jsg.c  char-jsg.h  pointer-jsg.c  pointer-jsg.h  string-jsg.c  string-jsg.h
c/demo/unistd/: execl.c  execve.c  fork.c  getuid.c  setuid.c
c/doc/: 数据结构.md  编程规范.md  编译原理.md  编译指令.md
c/docs/: CMakeLists.cmake  README  libubox.md  unistd.md  内存管理.md  函数编程.md  数据结构.md  标准模块.md  系统调用.md  编译指令.md
c/docs/.obsidian/: workspace
c/docs/c/: array.md  basic_data_type.md  const.md  function.md  operator.md  pointer.md  struct.md
c/docs/compile/: README.md  coredump.md  demo  gcc.md  gdb.md  include.md  make.md
c/docs/data_structure/: basic_data_type.md  pointer.md  struct.md
c/docs/glibc/: README.md  stdio.md  unistd.h.md  unistd.md
c/docs/glibc/sys/: socket.h.md
c/docs/libc/: fcntl.h.md  stdlib.md
c/docs/openwrt/: libubox.md
c/docs/system_call/: fork.md  unistd.md
c/docs/信号处理/: README
c/docs/文件IO/: README
c/docs/网络编程/: 基本TCP套接字编程.md
c/pkgs/: .gitignore  packages.yml
c/pkgs/ubus/: .gitignore  CMakeLists.txt  Makefile  build.sh  libubus-acl.c  libubus-internal.h  libubus-io.c  libubus-obj.c  libubus-req.c  libubus.h  ubus_common.h  ubusd.c  ubusd.h  ubusd_acl.c  ubusd_acl.h  ubusd_event.c  ubusd_id.c  ubusd_obj.c  ubusd_obj.h  ubusd_proto.c  ubusmsg.h
c/src/linux/process/: 001.c
c/src/linux/pthread/: 001.c
c/src/multitask/process/: process_mian.c
c/test/: CMakeLists.txt  Makefile  helloworld.c  test202107091052.c  test20210822034022.c  test20210822034022.h  test20210825143726.c  test20210825143726.h  test20210910114430.c  test20210910114430.h  test20210910145806.c  test20210910145806.h  test20210913154656.c  test20211029112030.c  uds-gwn7062.c
c/test/corefiles/: pointer.c
c/test/message/: logger.c
c/test/tcp_socket/: client.c  multiprocess_server.c  single_server.c
chinese/: 中文标点符号的使用.md
coffice/: README.md
compilation-tools/: README.md
compile/: README.md  strace.md
compiler/: README.md
computer/: BIOS.md  CPU.md  ELF.md  GNU.md  IDE.md  OS.md  PCI.md  README.md  SAS.md  SATA.md  SCSI.md  abi.md  api.md  application.md  character_encoding.md  common_gateway_interface.md  cpu.xlsx  cvs.md  design-pattern.md  displayer.md  distributed.md  file-type.md  hardware_structure.md  information.md  ip_address.md  memory.md  memory_structure.md  network.md  network_adapter.md  operating_system.md  process.md  programming_language.md  storage.md  thread.md  virtual.md
cpp/: .gitignore  CMakeLists.txt  README.md  helloworld.cpp
cpp/demo/: CMakeLists.txt  built-in_type.cpp  complex.h
cpp/demo/data-structure/: CMakeLists.txt  sequence-list.cpp
cpp/doc/: 函数编程.md  异常处理.md  的多任务.md
cpp/docs/: README.md  函数编程.md  异常处理.md  数据结构.md  流程结构.md  程序设计.md  程序调试.md  设计模式.md
cpp/docs/.obsidian/: workspace
cpp/docs/cpp/: array.md  basic_type.md  built-in_type.md  class.md  compile.md  object.md  operator.md  reference.md  struct.md  variable.md
cpp/docs/data_structure/: array.md  base_data_type.md  pointer.md
cpp/docs/libc/: iostream.md
cpp/inc/: date.cpp  date.h
cpp/src/Windows/: appaction.cpp
cpp/src/demo/: demo.cpp
cpp/src/file/: demo.conf  demo.cpp
css/: fonts.css
ctf/: README.md
data-structure/: README.md  sequence-list.md  双向循环列表.md  多维数组.md  顺序表.md
databases/: README.md
debugs/: README.md
demands/: 20251104-01.txt
design-mode/: README.md
device/: README.md  WNIC.md
devices/: README.md  screen.md
documents/: C Programming Language.md  CPP软件开发工程师.md  CSS.md  Cadence.md  DFS  DFS.md  EDA.md  Ethernet.md  IPC.md  LAN.md  OS.md  OTG.md  QSDK.md  README.md  VPN.md  VS Code.md  VS.md  WLAN.md  account.cvs  annotation.md  apache.md  cars.md  complie.md  config.md  dd.md  django.md  docker.md  gcc.md  gerrit.md  git.md  gnupg.md  html.md  https.md  information.md  ini.md  ip.md  json.md  keyboard.md  make.md  markdown.md  (+27 more)
drafts/: 2026-04-28.md  2026-05-13-01.txt  README.md  Untitled-1  Untitled-2  assistant.txt  database.txt  readme.txt  uuid.md  wengerbinning.txt
english/: README  README.md  [00]英语音标.md  [02]英语词汇.md  [03]英语语法.md  soundmark.md  词汇.md  语法.md  音标.md  音节.md
git/: git.md
gnu/: autoconf.md
html/: helloworld.html
language/: README.md  programming-languages-c.md
languages/: README.md
linux/: README  README.md  account.md  dpkg-deb.md  environment_variable.md  shell.md  文件管理.md  文件系统.md  用户管理.md  系统管理.md  设备管理.md
linux-kernel-modules/: crypto-linux.md
list/: BOOKS.LIST  (+2 more)
(+450 files in other folders)
